--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
+
 <script src ="./js/main.js"></script>
+<script src ="./js/data.js"></script>
 </body>
 </html>
